Add ignorePaths to Renovate configuration

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,6 +4,7 @@
     "github>konflux-ci/mintmaker//config/renovate/renovate.json"
   ],
   "branchPrefix": "osp-mintmaker/",
+  "ignorePaths": ["upstream/**"]
   "enabledManagers": [
     "tekton",
     "dockerfile",
