--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,7 +4,7 @@
     "github>konflux-ci/mintmaker//config/renovate/renovate.json"
   ],
   "branchPrefix": "osp-mintmaker/",
-  "ignorePaths": ["upstream/**"]
+  "ignorePaths": ["upstream/**"],
   "enabledManagers": [
     "tekton",
     "dockerfile",
